--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "tequilajs",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "description": "module for soft work with Socket.io",
-    "main": "test.js",
+    "main": "./lib/index.js",
     "directories": {
         "lib": "lib"
     },
@@ -25,5 +25,9 @@
     "bugs": {
         "url": "https://github.com/yamyn/tequilaJS/issues"
     },
-    "homepage": "https://github.com/yamyn/tequilaJS#readme"
+    "homepage": "https://github.com/yamyn/tequilaJS#readme",
+    "dependencies": {
+        "joi": "17.4.2",
+        "socketio-file-upload": "0.7.3"
+    }
 }
